# OGLEngine

./: .gitignore  .gitmodules  CMakeLists.txt
Resources/Models/: chair_LP.fbx
Shaders/: FSDefault.glsl  FSLightSource.glsl  VSDefault.glsl
include/: AssetImporter.hpp  Camera.hpp  CameraManager.hpp  CoreMinimal.hpp  InputSystem.hpp  LightComponent.hpp  LogSystem.h  Object.hpp  ObjectManager.hpp  PointLightComponent.hpp  ShaderProgram.hpp  StaticMeshComponent.hpp  Texture.hpp  ViewLibrary.hpp
src/: AssetImporter.cpp  Camera.cpp  CameraManager.cpp  ObjectManager.cpp  StaticMeshComponent.cpp  Texture.cpp  main.cpp
